[gd_scene load_steps=36 format=2]

[ext_resource path="res://gfx/Dizzy35.png" type="Texture" id=1]
[ext_resource path="res://scenes/level/level3.gd" type="Script" id=2]
[ext_resource path="res://scenes/camera/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/dizzy/Dizzy.tscn" type="PackedScene" id=4]
[ext_resource path="res://particles/fire torch/fire_torch.tscn" type="PackedScene" id=5]
[ext_resource path="res://gfx/items/short_rope_2x16.png" type="Texture" id=6]
[ext_resource path="res://gfx/items/skyboots_2x16.png" type="Texture" id=7]
[ext_resource path="res://audio/blip4.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/test/steps.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/water/water.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/items/item.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/chars/danny/danny.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/gui/lifes/lifes.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/level/show_clouds.gd" type="Script" id=14]
[ext_resource path="res://scenes/chars/danny/danny.gd" type="Script" id=15]
[ext_resource path="res://scenes/machine/machine.tscn" type="PackedScene" id=16]
[ext_resource path="res://gfx/items/starting_handle_2x16.png" type="Texture" id=17]
[ext_resource path="res://gfx/items/long_rope_2x16.png" type="Texture" id=18]
[ext_resource path="res://particles/portal/portal.tscn" type="PackedScene" id=19]
[ext_resource path="res://audio/blip14.wav" type="AudioStream" id=20]
[ext_resource path="res://audio/blip5.wav" type="AudioStream" id=21]
[ext_resource path="res://audio/crust.wav" type="AudioStream" id=22]
[ext_resource path="res://audio/C5.wav" type="AudioStream" id=23]
[ext_resource path="res://scenes/backpack/backpack.tscn" type="PackedScene" id=24]
[ext_resource path="res://audio/blip2.wav" type="AudioStream" id=25]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 0.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.5, 0.75 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 49.5, 9.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 24, 14 )

[sub_resource type="Animation" id=10]
resource_name = "show_danny_on_tree"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("../camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 2.3, 3.4, 4.5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "to_dizzy"
tracks/0/type = "value"
tracks/0/path = NodePath("../camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 85.25 )

[sub_resource type="Animation" id=13]
resource_name = "show_clouds"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("../../camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=14]

[sub_resource type="CircleShape2D" id=15]

[node name="level35" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.780392, 0.941176, 0.847059, 1 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -122, 32 )
polygon = PoolVector2Array( -103, -85, -7, -85, -16, -92, -103, -92, -103, -88 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -128, 32 )
polygon = PoolVector2Array( -231, -34, -224, -28, -224, -20, -230, -12, -229, -10, -228, 12, -219, 12, -213, 17, -212, 20, -211, 60, -184, 60, -177, 63, -172, 67, -164, 67, -158, 71, -153, 76, -76, 76, -71, 71, -65, 68, -58, 67, -53, 62, -48, 60, -43, 60, -38, 55, -31, 52, -26, 52, -20, 46, -15, 44, -10, 44, -5, 39, 4, 36, 121, 36, 129, 40, 135, 46, 137, 61, 144, 67, 144, 79, 148, 79, 156, 87, 156, 92, -233, 92 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -128, 32 )
polygon = PoolVector2Array( -72, -13, -42, -13, -38, -21, -25, -21, -22, -29, -11, -29, -6, -37, 21, -37, 26, -45, 37, -45, 42, -53, 53, -53, 58, -61, 69, -61, 74, -69, 117, -69, 119, -74, 117, -76, 80, -76, 72, -73, 65, -67, 62, -67, 55, -64, 50, -60, 46, -60, 38, -56, 34, -52, 29, -51, 25, -49, 20, -44, 0, -44, -7, -41, -13, -36, -19, -36, -25, -33, -30, -28, -35, -28, -42, -25, -48, -20, -61, -20, -66, -16 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -128, 32 )
polygon = PoolVector2Array( 269, 92, 269, 88, 277, 80, 293, 79, 301, 79, 303, 65, 304, 57, 300, 52, 300, 48, 300, 34, 304, 26, 310, 26, 319, 26, 327, 28, 331, 34, 332, 42, 336, 45, 338, 49, 340, 60, 348, 60, 355, 66, 358, 77, 424, 77, 426, 60, 440, 60, 441, 52, 456, 52, 458, 35, 482, 35, 483, 13, 456, 13, 456, 0, 500, -85, 491, 96 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -189, 52, -197, 44, -256, 44, -256, 52 )

[node name="cloud_1" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="cloud_1"]
position = Vector2( 145, 39 )
shape = SubResource( 2 )

[node name="cloud_2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cloud_2"]
position = Vector2( 89, 28 )
shape = SubResource( 3 )

[node name="fire_torch" parent="." instance=ExtResource( 5 )]
position = Vector2( -27, -125 )

[node name="fire_torch2" parent="." instance=ExtResource( 5 )]
position = Vector2( -111, -13 )

[node name="fire_torch3" parent="." instance=ExtResource( 5 )]
position = Vector2( -271, 35 )

[node name="fire_torch4" parent="." instance=ExtResource( 5 )]
position = Vector2( -228, -53 )

[node name="fire_torch5" parent="." instance=ExtResource( 5 )]
position = Vector2( 168, -13 )

[node name="items" type="Node2D" parent="."]

[node name="item_starting_handle" parent="items" instance=ExtResource( 11 )]
position = Vector2( -208, -69 )
z_index = 5
texture = ExtResource( 17 )

[node name="item_knotted_rope" parent="items" instance=ExtResource( 11 )]
position = Vector2( -482, -23 )
z_index = 5
texture = ExtResource( 18 )

[node name="item_skyboots" parent="items" instance=ExtResource( 11 )]
visible = false
position = Vector2( -491, -55 )
z_index = 5
texture = ExtResource( 7 )

[node name="item_short_rope" parent="items" instance=ExtResource( 11 )]
position = Vector2( 198, 50 )
z_index = 5
texture = ExtResource( 6 )

[node name="item_long_rope" parent="items" instance=ExtResource( 11 )]
position = Vector2( -345, 37 )
z_index = 5
combined_with = [ "" ]
texture = ExtResource( 18 )

[node name="Danny" parent="." instance=ExtResource( 12 )]
self_modulate = Color( 0.780392, 0.941176, 0.847059, 1 )
position = Vector2( -34, -26 )
frame = 4
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="danny_on_tree" type="Area2D" parent="Danny"]

[node name="on_tree" type="CollisionShape2D" parent="Danny/danny_on_tree"]
position = Vector2( -22.5, -36.5 )
shape = SubResource( 8 )

[node name="danny_saved" type="Area2D" parent="Danny"]
position = Vector2( 0, -78 )

[node name="saved" type="CollisionShape2D" parent="Danny/danny_saved"]
position = Vector2( 11, 160 )
shape = SubResource( 9 )

[node name="show_danny" type="AnimationPlayer" parent="Danny"]
anims/show_danny_on_tree = SubResource( 10 )
anims/to_dizzy = SubResource( 11 )

[node name="machine" parent="." instance=ExtResource( 16 )]
position = Vector2( 248, 96 )

[node name="Dizzy" parent="." instance=ExtResource( 4 )]
position = Vector2( -327, 84 )

[node name="camera" parent="." instance=ExtResource( 3 )]

[node name="cutscenes" type="Node2D" parent="."]

[node name="show_clouds" type="Area2D" parent="cutscenes"]
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cutscenes/show_clouds"]
position = Vector2( -8, -13.25 )
shape = SubResource( 12 )

[node name="danny_on_tree" type="AnimationPlayer" parent="cutscenes/show_clouds"]
anims/show_clouds = SubResource( 13 )

[node name="step" parent="." instance=ExtResource( 9 )]
position = Vector2( -233, 60 )

[node name="water" parent="." instance=ExtResource( 10 )]
position = Vector2( 96, 106 )
region_rect = Rect2( 0, 0, 160, 8 )

[node name="lifes" parent="." instance=ExtResource( 13 )]
position = Vector2( -32, 8 )

[node name="fire" type="Area2D" parent="."]

[node name="fire_01" type="CollisionShape2D" parent="fire"]
position = Vector2( -251, 66 )
shape = SubResource( 14 )

[node name="fire_02" type="CollisionShape2D" parent="fire"]
position = Vector2( -208, -22 )
shape = SubResource( 15 )

[node name="fire_03" type="CollisionShape2D" parent="fire"]
position = Vector2( -92, 18 )
shape = SubResource( 15 )

[node name="fire_04" type="CollisionShape2D" parent="fire"]
position = Vector2( -8, -94 )
shape = SubResource( 15 )

[node name="fire_05" type="CollisionShape2D" parent="fire"]
position = Vector2( 189, 18 )
shape = SubResource( 15 )

[node name="portal" parent="." instance=ExtResource( 19 )]
margin_left = 324.0
margin_top = 45.0
margin_right = 354.0
margin_bottom = 67.0

[node name="audio" type="Node2D" parent="."]

[node name="click" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 21 )

[node name="start" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 20 )

[node name="drown" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 22 )

[node name="hp_lost" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 8 )

[node name="backpack_click" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 23 )

[node name="backpack_confirm" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 25 )

[node name="backpack" parent="." instance=ExtResource( 24 )]

[connection signal="body_entered" from="Danny/danny_on_tree" to="Danny" method="_on_danny_on_tree_body_entered"]
[connection signal="area_entered" from="Danny/danny_saved" to="Danny" method="_on_danny_saved_area_entered"]
[connection signal="body_entered" from="cutscenes/show_clouds" to="cutscenes/show_clouds" method="_on_show_clouds_body_entered"]
